# python-warmup

./: .gitignore  README.md  SCRIPTS_TO_PORT.md  csv_transformer.py  csv_transformer_pandas.py  log_generator.py  log_parser.py  pyproject.toml  sql_to_pandas.py  test_csv_transformer.py  test_csv_transformer_pandas.py  test_log_generator.py  test_log_parser.py  test_word_counter.py  word_counter.py
sql/: README.md  peer_comparision_self_excluded.sql
